# ayekta-emr

./: .gitignore  CLINICAL_FEEDBACK_SPEC.md  DEPLOYMENT_GUIDE.md  FHIR_ARCHITECTURE.md  GOOGLE_DRIVE_SETUP.md  LOGO_FILES_NEEDED.md  MODULAR_ARCHITECTURE.md  PHASE_1_MODULAR_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PR.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PLAN_items_1_4_5.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  index.html  manifest.webmanifest  offline.html  package-lock.json  package.json  registerSW.js  setup-github.sh  sw.js  vite.config.ts
.claude/: settings.local.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/ayekta_api/: __init__.py  config.py  db.py  deps.py  main.py  storage_presign.py
apps/api/ayekta_api/api/: attachments_router.py  auth_router.py  health_router.py  sync_router.py
apps/api/ayekta_api/domain/: __init__.py  chart_bundle_ingest.py
apps/api/migrations/: 001_core_tenant_chart_ingest.sql  002_attachment_ingest.sql  003_attachment_presign.sql  004_users_auth.sql  005_normalized_clinical.sql  006_encounter_server_revision.sql  007_attachment_blueprint_columns.sql
assets/: AnesthesiaRecord-BS21meGK.js  AnesthesiaRecord-CPyx6l_w.js  AnesthesiaRecord-DISixX04.js  AnesthesiaRecord-_c0lgCFs.js  ComplicationsLog-CdSlYYrK.js  ComplicationsLog-iJmdux7P.js  Consent-Ctkrdv7C.js  Consent-DJUbIDe6.js  Consent-DNiflFdR.js  Consent-DbcSIc_0.js  Demographics-BIh--xE2.js  Demographics-BSW0Rk6E.js  Demographics-DNrZI83e.js  Demographics-Deag_K8l.js  Discharge-CosHfeaL.js  Discharge-D6P9fxE-.js  (+137 more)
(+197 files in other folders)
